[gd_scene load_steps=6 format=3 uid="uid://bcbcnq632a1kc"]

[ext_resource type="Script" path="res://scenes/AudioPlayer.gd" id="1_dequm"]
[ext_resource type="AudioStream" uid="uid://b4fwmov2xgq10" path="res://art/Fruit collect 1.wav" id="2_15il7"]
[ext_resource type="AudioStream" uid="uid://bd2pwg46ejuh8" path="res://art/Hit damage 1.wav" id="3_sydvl"]
[ext_resource type="AudioStream" uid="uid://0emowft232x6" path="res://art/Boss hit 1.wav" id="4_nhw1w"]
[ext_resource type="AudioStream" uid="uid://d02tfmgypb0wc" path="res://art/Big Egg collect 1.wav" id="5_j7hfs"]

[node name="AudioPlayer" type="Node2D"]
script = ExtResource("1_dequm")

[node name="AppleCollect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_15il7")

[node name="Turn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_sydvl")

[node name="GameOver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_nhw1w")

[node name="StartGame" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_j7hfs")
